# snappa_survivors_redux

./: .gitignore  todos.md
game/: Cargo.toml
game/assets/enemies/faceless/: stats.ron
game/assets/survivors/dewey/: stats.ron
game/assets/survivors/matthew/: stats.ron
game/assets/upgrades/: table.ron  table_tmp.ron
game/assets/weapons/bouncing_dice/: stats.ron
game/assets/weapons/bumpin_tunes/: stats.ron
game/assets/weapons/dice_guard/: stats.ron
game/assets/weapons/paddle_back/: stats.ron
game/assets/weapons/throw_hands/: stats.ron
game/src/: build.rs  client.rs  lib.rs  main.rs  render.rs  server.rs  shared.rs  utils.rs
game/src/client/: camera.rs  client_states.rs  enemies.rs  game_client.rs  game_kinds.rs  load_game.rs  lobby.rs  main_menu.rs  mp_selection_menu.rs  pause_menu.rs  players.rs  projectiles.rs  weapons.rs
game/src/client/weapons/: bouncing_dice.rs  dice_guard.rs  throw_hands.rs
game/src/render/: animation.rs  camera.rs  enemies.rs  hud.rs  map.rs  menus.rs  player.rs  ui.rs  upgrades.rs  weapons.rs
game/src/render/hud/: stat_display_trait.rs
game/src/render/menus/: in_game_pause_menu.rs  lobby.rs
game/src/render/ui/: button.rs  screen_transition.rs
game/src/server/: enemies.rs  game_kinds.rs  game_rules.rs  loading.rs  lobby.rs  players.rs  projectiles.rs  weapons.rs
game/src/server/weapons/: bouncing_dice.rs  dice_guard.rs  throw_hands.rs
game/src/shared/: colliders.rs  combat.rs  damage.rs  despawn_timer.rs  drops.rs  enemies.rs  game_kinds.rs  game_object_spawning.rs  game_rules.rs  inputs.rs  lobby.rs  pickups.rs  players.rs  projectiles.rs  states.rs  stats.rs  upgrades.rs  weapons.rs
game/src/shared/colliders/: generic_message_system.rs  trait_def.rs
game/src/shared/enemies/: editor.rs  spawner.rs
game/src/shared/stats/: components.rs  editor.rs  plugins.rs  relationships.rs  xp.rs
game/src/shared/upgrades/: editor.rs  (+1 more)
game/tests/: lobby.rs  multiplayer_connection.rs  single_player_connection.rs
game/tests/common/: utils.rs
game/util_scripts/: make_stats_files.py
(+3 files in other folders)
