[package]
name = "snappa_survivors"
version = "0.1.0"
edition = "2024"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[features]
default = ["lightyear"]
dev = [
    "inspector",
    "no_splash",
    "bevy/reflect_auto_register"
]
inspector = []
lightyear = [
    "lightyear/avian2d",
    "lightyear/replication",
    "lightyear/netcode",
    "lightyear/udp"
]
no_splash = []


[dependencies]
avian2d = "0.4.1"
bevy = "0.17.3"
bevy-inspector-egui = "0.35.0"
bevy_egui = "0.38.1"
bevy_enhanced_input = "0.20.1"
clap = {version = "4.5.54", features = ['derive']}
lightyear = "0.25.5"
rand = "0.9.2"
ron = "0.12.0"
serde = "1.0.228"
